# marklogic-python-client

./: .copyrightconfig  .editorconfig  .gitignore  CODEOWNERS  CONTRIBUTING.md  Jenkinsfile  LICENSE  NOTICE.txt  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: _config.yml  creating-client.md  eval.md  example-setup.md  getting-started.md  index.md  reading.md  rows.md  transactions.md  writing.md
docs/managing-documents/: managing-documents.md  reading.md  searching.md  writing.md
examples/: python-blog-post.ipynb  release-1.1-examples.ipynb
examples/langchain/: .gitignore  README.md  ask.py  ask_contextual_query.py  ask_similar_query.py  ask_vector_query.py  build.gradle  docker-compose-12.yml  docker-compose.yml  gradle.properties  load_data.py  load_data_with_embeddings.py  marklogic_contextual_query_retriever.py  marklogic_retriever.py  marklogic_similar_query_retriever.py  marklogic_vector_query_retriever.py
examples/langchain/gradle/wrapper/: gradle-wrapper.properties
examples/langchain/src/main/ml-modules/root/: enron.xqy
marklogic/: __init__.py  client.py  cloud_auth.py  documents.py  eval.py  rows.py  transactions.py  vectors.py
marklogic/internal/: eval.py  util.py
shell/: docs.py  test_app.py
test-app/: .env  .gitignore  build.gradle  docker-compose.yml  gradle.properties
test-app/gradle/wrapper/: gradle-wrapper.properties
test-app/src/main/ml-config/databases/: modules-database.json
test-app/src/main/ml-config/servers/: ssl-server.json  test-server.json
test-app/src/main/ml-data/: collections.properties  doc2;copy.xml  doc2=copy.xml  permissions.properties
test-app/src/main/ml-modules/: rest-properties.json
test-app/src/main/ml-modules/invoke/: read_doc1.sjs  read_doc2.xqy  simple.sjs  simple.xqy  simple_vars.sjs  simple_vars.xqy
test-app/src/main/ml-modules/options/: test-options.xml
test-app/src/main/ml-modules/transforms/: envelope.sjs
test-app/src/main/ml-schemas/tde/: musician.json
tests/: conftest.py  remove-uri-plan.json  test_cloud.py  test_eval.py  test_get_documents.py  test_graphql.py  test_invoke.py  test_query.py  test_read_documents.py  test_rows.py  test_rows_update.py  test_search.py  test_search_docs.py  test_ssl.py  test_transactions.py  test_vectors.py  test_write_documents.py  test_write_documents_with_metadata.py
(+11 files in other folders)
