[tool.poetry]
name = "marklogic-python-client"
version = "1.1.0"
description = "Python client for MarkLogic, built on the requests library"
authors = ["MarkLogic <general@developer.marklogic.com>"]
readme = "README.md"
packages = [{include = "marklogic"}]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
requests_toolbelt = "^1.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# Enables live logging; see https://docs.pytest.org/en/latest/how-to/logging.html#live-logs 
log_cli = 1
log_cli_level = "DEBUG"
